--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,8 +18,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="index.css">
-    <script type="module" src="index.js"></script>
+    <link rel="stylesheet" href="./index.css">
+    <script type="module" src="./index.js"></script>
 </head>
 
 <body>
@@ -30,7 +29,7 @@
             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/pages/load/load.html">Cargar datos</a>
+            <a class="nav-link" href="./pages/load/load.html">Cargar datos</a>
         </li>
     </ul>
 
