--- a/pages/load/load.html
+++ b/pages/load/load.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,8 +20,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
-    <link rel="stylesheet" href="pages/load/load.css">
-    <script type="module" src="pages/load/load.js"></script>
+    <link rel="stylesheet" href="./load.css">
+    <script type="module" src="./load.js"></script>
 </head>
 
 <body>
