--- a/pages/load/load.html
+++ b/pages/load/load.html
@@ -28,7 +28,7 @@
 
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link" href="/">Inicio</a>
+            <a class="nav-link" href="../../">Inicio</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Cargar datos</a>
