--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Dofus Resource XP / Load</title>
+
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
