update table creation and interaction

--- a/index.html
+++ b/index.html
@@ -42,16 +42,13 @@
                     <tr>
                         <th class="date-head" data-bs-toggle="tooltip" data-bs-placement="top"
                             data-bs-title="Última Actualización">Fecha</th>
-                        <th class="lvl-head">Lvl</th>
                         <th class="name-head">Nombre</th>
                         <th class="xp-head">xp 2.70</th>
                         <th class="value-head">Valor</th>
                         <th class="pm-head" data-bs-toggle="tooltip" data-bs-placement="top"
-                            data-bs-title="Precio mínimo de compra">Pm</th>
-                        <th class="kxp-head" data-bs-toggle="tooltip" data-bs-placement="top"
-                            data-bs-title="Cantidad de kamas x 1xp">KxXp</th>
+                            data-bs-title="Precio máximo de compra por artículo">PM</th>
                         <th class="total-head" data-bs-toggle="tooltip" data-bs-placement="top"
-                            data-bs-title="Costo para subir a nivel 100 en kamas">Total</th>
+                            data-bs-title="Costo para subir a nivel 100 en kamas / Cantidad de recursos necesarios">Total</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
