add sort options, search input, download btn, update table creation and add input for xp field

--- a/pages/load/load.html
+++ b/pages/load/load.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Dofus Resource XP</title>
+    <title>Dofus Resource XP / Load</title>
 
     <link rel="icon" type="image/x-icon" href="../../assets/icons/favicon.ico">
 
