--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Dofus Resource XP / Load</title>
+    <title>Dofus Resource XP</title>
 
     <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico">
 
@@ -19,6 +19,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <link rel="stylesheet" href="./index.css">
     <script type="module" src="./index.js"></script>
@@ -35,6 +36,15 @@
         </li>
     </ul>
 
+    <div class="row m-2">
+        <div class="col-3">
+            <div class="form-floating">
+                <input id="resource-search" type="search" class="form-control" placeholder="Buscar recurso">
+                <label for="resource-search">Buscar recurso</label>
+            </div>
+        </div>
+    </div>
+
     <article>
         <section id="resources-section">
             <table id="resource-table" class="table table-sm table-bordered">
@@ -48,13 +58,28 @@
                         <th class="pm-head" data-bs-toggle="tooltip" data-bs-placement="top"
                             data-bs-title="Precio máximo de compra por artículo">PM</th>
                         <th class="total-head" data-bs-toggle="tooltip" data-bs-placement="top"
-                            data-bs-title="Costo para subir a nivel 100 en kamas / Cantidad de recursos necesarios">Total</th>
+                            data-bs-title="Costo para subir a nivel 100 en kamas / Cantidad de recursos necesarios">
+                            Total
+                        </th>
                     </tr>
                 </thead>
                 <tbody></tbody>
             </table>
         </section>
+
+        <div class="btn-group dropup" id="sort-menu">
+            <button type="button" class="btn btn-secondary dropdown-toggle rounded-pill pt-1 pb-1 ps-2 pe-2" data-bs-toggle="dropdown"
+                aria-expanded="false" data-bs-auto-close="false">
+                <i class="bi bi-sliders"></i>
+            </button>
+            <ul class="dropdown-menu"></ul>
+        </div>
+
+        <button type="button" class="btn btn-secondary rounded-pill pt-1 pb-1 ps-2 pe-2" id="download-btn">
+            <i class="bi bi-download"></i>
+        </button>
     </article>
+
 
     <article style="position: absolute; width: 100dvw; height: 100dvh; pointer-events: none;">
         <div aria-live="polite" aria-atomic="true" class="position-relative h-100 w-100">
